--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-builder",
+  "name": "create-react-app-module-builder",
   "version": "0.9.0",
   "description": "Magic number detector for javascript",
   "keywords": [
