--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cram-builder",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "CRAM Builder - this's a script for `create-react-app-module` package which helps to build new feature-modules. Just build your own app with isolated structure. ",
+  "homepage": "https://github.com/DenisHooke/module-builder",
   "keywords": [
     "react",
     "create-react-app-module",
