Updated description of the module

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cram-builder",
-  "version": "0.9.7",
-  "description": "CRAM Builder - this's a script for `create-react-app-module` package which helps to build new feature-modules. Just build your own app with isolated structure. ",
+  "version": "0.9.8",
+  "description": "CRAM Builder - this's a helpder-script for [Create React App Module](https://github.com/facebook/create-react-app) boilerplate which helps to build new feature-modules. Just build your own app with isolated structure.",
   "homepage": "https://github.com/DenisHooke/module-builder",
   "keywords": [
     "react",
